--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -81,6 +81,18 @@
   url                 = {https://www.cda.cit.tum.de/files/eda/2022_tcad_noise-aware_quantum_circuit_simulation_with_decision_diagrams.pdf},
 }
 
+@inproceedings{mqt,
+  title               = {The {{MQT}} Handbook: {{A}} Summary of Design Automation Tools and Software for Quantum Computing},
+  shorttitle          = {The MQT Handbook},
+  author              = {Wille, Robert and Berent, Lucas and Forster, Tobias and Kunasaikaran, Jagatheesan and Mato, Kevin and Peham, Tom and Quetschlich, Nils and Rovara, Damian and Sander, Aaron and Schmid, Ludwig and Schoenberger, Daniel and Stade, Yannick and Burgholzer, Lukas},
+  year                = {2024},
+  booktitle           = qsw,
+  doi                 = {10.1109/QSW62656.2024.00013},
+  eprint              = {2405.17543},
+  eprinttype          = {arxiv},
+  addendum            = {A live version of this document is available at \url{https://mqt.readthedocs.io}},
+}
+
 @inproceedings{wille2020JKQtools,
   title               = {{JKQ}: {JKU} Tools for Quantum Computing},
   author              = {Wille, Robert and Hillmich, Stefan and Burgholzer, Lukas},
